--- a/css/style.css
+++ b/css/style.css
@@ -254,28 +254,15 @@ a{
     font-weight: 200;
     margin-bottom: 100px;
 }
-.serviceSlide {
+.serviceRight{
     padding:20px;
     margin-top: 40px;
     white-space:nowrap;
-    overflow-x:auto;
-    overflow: hiden;
     position: absolute;
     width:40%;
     height: 680px;
     right: 0;
-  }
-    .do1{
-        width:340px;
-        height:550px;
-        display:inline-block;
-        white-space:normal;
-        overflow-x: auto;
-        font-weight: 300;
-    }
-.do1 img{
-    height: 550px;
-    width: 320px;
+    overflow: hidden;
 }
 .dots{
     position: absolute;
@@ -299,6 +286,7 @@ a{
     height: 400px;
     text-align: center;
     margin-inline: 30px;
+    overflow: hidden;
 }
 
 
@@ -310,6 +298,7 @@ a{
     justify-content: center;
     border-radius: 5px;
     transition: .5s linear;
+    overflow: hidden;
 }
   .swiper-pagination {
     padding-top: 10px;
@@ -319,6 +308,15 @@ a{
   .swiper-pagination-bullet{
     width: 4rem !important;
     height: 4rem !important;
+  }
+  .swiper-container .swiper-pagination-bullet {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    border: solid var(--main-color) 2px;
+    background: transparent;
+    opacity: 1;
+    overflow: hidden;
   }
 .swiper-pagination-bullet-active {
     background-color: var(--main-color) !important;
@@ -356,12 +354,32 @@ a{
     font-size: 18px;
     font-weight: 200;
 }
+.swiper-slide.swiper-slide-1{
+    background-image: url('../Assets/Rectangle252.png');margin-inline: 40px; width: 400px; height: 550px;
+}
+.swiper-slide.swiper-slide-2{
+    background-image: url('../Assets/screen2.png');margin-inline: 40px; width: 400px; height: 550px;
+}
+.swiper-slide.swiper-slide-3{
+    background-image: url('../Assets/screen3.png');margin-inline: 40px; width: 400px; height: 550px;
+}
+.swiper-slide.swiper-slide-4{
+    background-image: url('../Assets/screen4.png');margin-inline: 40px; width: 400px; height: 550px;
+}
+.swiper-slide.swiper-slide-5{
+    background-image: url('../Assets/screen5.png');margin-inline: 40px; width: 400px; height: 550px;
+}
 .footer ul{
 margin-top: 40px;
 margin-bottom: 40px;
 }
 footer li{
     padding-bottom:16px;
+}
+.footerC{
+    padding-top:20px; 
+    margin-left:8%;
+    padding: 24px;
 }
 .contacts a{
   margin-left: 32px;
@@ -504,6 +522,17 @@ footer li{
         width: 5rem !important;
         height: 5rem !important;
       }
+      .AboutHeader{
+        display: block;
+        margin-left: 20%;
+       width: 100%;
+    }
+    .AboutHeader hr {
+        margin-inline: 8%;
+        border-top: 1px solid #FF4600;
+        margin-right: 40%;
+        margin-left: 0%;
+      }
       .serviceAll{
         height: 800px;
     }
@@ -564,6 +593,16 @@ font-size: 12px;
         font-size: 18px;
         font-weight: 400;
 }
+.footerC {
+    padding-top:20px; 
+    position: relative;
+    margin-left:20%;
+    padding: 24px;
+    text-align: center;
+}
+.disclaimer{
+    position: relative;
+}
 .sub span {
     font-size: 8px;
     }
@@ -592,6 +631,9 @@ font-size: 12px;
 .icon{
     font-size: 14px;
     margin-top: 6px;
+}
+.footerC {
+    margin-left:18%;
 }
   }
   @media (max-width:  569px) {
@@ -644,7 +686,7 @@ font-size: 12px;
      font-size: 24px;
      margin-left: 60px;
 }
-.serviceSlide {
+.serviceRight {
 width:100%;
 position: relative;
   }
@@ -675,4 +717,33 @@ position: relative;
     font-weight: 200;
     margin-bottom: 20px;
 }
+.MoreServices{
+    margin-inline: 9%;
+}
+.footerC {
+    margin-left:15%;
+}
+.swiper-slide.swiper-slide-1{
+    height: 500px;
+}
+.swiper-slide.swiper-slide-2{
+    height: 500px;
+}
+.swiper-slide.swiper-slide-3{
+    height: 500px;
+}
+.swiper-slide.swiper-slide-4{
+    height: 500px;
+}
+.swiper-slide.swiper-slide-5{
+    height: 500px;
+}
+.swiper {
+    margin-inline: 2px;
+}
   }
+  @media (max-width:  565px) {
+    .footerC {
+        margin-left:13%;
+    }
+}
