--- a/css/style.css
+++ b/css/style.css
@@ -527,6 +527,7 @@ footer li{
         margin-left: 20%;
        width: 100%;
     }
+ 
     .AboutHeader hr {
         margin-inline: 8%;
         border-top: 1px solid #FF4600;
@@ -604,7 +605,7 @@ font-size: 12px;
     position: relative;
 }
 .sub span {
-    font-size: 8px;
+    font-size: 11px;
     }
   }
   @media (max-width:  700px) {
@@ -637,6 +638,12 @@ font-size: 12px;
 }
   }
   @media (max-width:  569px) {
+    .AboutHeader h1{
+        font-size: 12px;
+    }
+    .title h1{
+        font-size: 14px;
+    }
    .navs{
        display: none;
    }
@@ -709,8 +716,11 @@ position: relative;
     color: #fff;
     display: block;
     margin-top: 60px;
-    width: 100%;
+    width: 80%;
+    margin-right: 5%;
+    font-size: small;
 }
+
 .sub1{
     padding-top: 50px;
     font-size: 18px;
@@ -746,4 +756,15 @@ position: relative;
     .footerC {
         margin-left:13%;
     }
+}
+@media (max-width:  371px) {
+    .AboutHeader h1{
+        font-size: 10px;
+    }
+    .title h1{
+        font-size: 14px;
+    }
+    .sub span {
+        font-size: 8px;
+        }
 }
