--- a/css/style.css
+++ b/css/style.css
@@ -33,8 +33,8 @@
     display: none;
 }
 .LandingPage{
-    padding-top: 20px;
-    margin-inline: 8%;
+    padding-top: 28px;
+    margin-inline: 10%;
 }
 .logo{
     width: 14%;
@@ -91,7 +91,7 @@
     display: flex;
     position: absolute;
     margin-top: 30px;
-    right: 8%;
+    right: 10%;
 }
 .search p{
 margin-top: 10px;
@@ -132,10 +132,10 @@ margin-top: 10px;
     margin-left: 75px;
 }
 .landing{
-    margin-top: 100px;
+    margin-top: 60px;
 }
 .landing div{
-padding: 16px;
+padding: 14px;
 }
  .landing h3{
    font-style: Bold;
@@ -154,7 +154,8 @@ font-size: 20px;
 }
 .landing button{
     margin: 14px;
-    padding: 12px;
+    padding-block: 8px;
+    padding-inline: 12px;
     border-radius: 12px;
     background-color: #FF4600;
     font-size: 18px;
@@ -166,7 +167,7 @@ display: flex;
 }
 .whatsapp{
     position: absolute;
-    right: 8%;
+    right: 10%;
     margin-right: 20px
 }
 .scroll p{
@@ -184,10 +185,10 @@ font-size: 20px;
       margin-top: 80px;
   }
   .AboutHeader hr {
-    margin-inline: 8%;
+    margin-inline: 10%;
     border-top: 1px solid #FF4600;
-    margin-right: 20%;
-    margin-left: 46%;
+    margin-right: 10%;
+    margin-left: 56%;
   }
   .WhatWedo{
       display: block;
@@ -196,7 +197,7 @@ font-size: 20px;
       display: flex;
   }
   .AboutHeader h1{
-    padding-left: 130px;
+    padding-left: 165px;
     font-size: 30px;
     font-weight: 500;
 }
@@ -237,7 +238,7 @@ font-size: 20px;
 .serviceAll{
     display: flex;
     margin-top: 60px;
-    margin-left: 8%;
+    margin-left: 10%;
     padding-inline: 17px;
     height: fit-content;
     width: 90%;
@@ -301,12 +302,13 @@ a{
      font-size: 36px;
 }
 .MoreServices{
-    margin-left: 8%;
-    margin-right: 7%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 .MoreServices hr{
  margin-left: 200px;
  margin-top: -20px;
+ margin-right: 6%;
  border-top: 1px solid black;
 }
 
@@ -370,8 +372,8 @@ a{
     color: #fff;
 }
 .footerContainer{
-    margin-left: 8%;
-    margin-right: 7%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 .footer a{
     color: rgb(173, 173, 173);
@@ -402,8 +404,9 @@ footer li{
 }
 .footerC{
     padding-top:20px; 
-    margin-left:8%;
+    margin-left:10%;
     padding: 24px;
+    font-size: 16px;
 }
 .contacts a{
   margin-left: 32px;
@@ -445,7 +448,7 @@ footer li{
 }
 .disclaimer{
     position: absolute;
-    right: 50px;
+    right: 10%;
 }
 .disclaimer ul{
     display: flex;
